# ZigbeeBlinds

./: CMakeLists.txt  blinds.mjs  partitions.csv  sdkconfig
main/: CMakeLists.txt  config.h  idf_component.yml  main.cpp  main.h  prefs.cpp  sensor.cpp  sensor.h
main/ext/: adc.cpp  adc.h  hdc2080.cpp  hdc2080.h  motor.cpp  motor.h
main/zigbee/: core.cpp  core.h  endpoint.cpp  endpoint.h  esp_delta_ota_ops.cpp  handlers.cpp  handlers.h
patches/: i2cdev.c
